--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,35 @@
+body, html{
+    height: 100%;
+    margin: 0;
+}
+
+.app-container{
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header{
+
+    top: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    padding:10px
+}
+main{
+
+max-height: 50%;
+overflow-y: auto;
+}
+footer{
+    flex-shrink: 0;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color:white;
+}
 .save-button{
     font-size: 2vw;
 }
