--- a/src/styles/PersonalInformation.css
+++ b/src/styles/PersonalInformation.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
     width: 50%;
+    margin:0 auto;
+    padding: 20px
 }
 h2{
     grid-area: 1 /1 / 2/ -1
